# MM-MO-GOMEA

./: CMakeLists.txt  Makefile  environment.yml  testrunpy.py
params/: py_params_multimodal.txt
src/: CMakeLists.txt
src/Evolution/: EvolutionState.cpp  MOArchive.cpp
src/Fitness/: AccuracyFitness.cpp  Fitness.cpp  MOFitness.cpp
src/GOMEA/: GOMEAFOS.cpp  GOMEAGenerationHandler.cpp  GOMVariator.cpp
src/Genotype/: Multitree.cpp  Node.cpp  SingleNode.cpp
src/Include/GPGOMEA/Evolution/: EvolutionState.h  MOArchive.h
src/Include/GPGOMEA/Fitness/: Fitness.h  MOFitness.h
src/Include/GPGOMEA/Genotype/: Multitree.h  Node.h  SingleNode.h
src/Include/GPGOMEA/Utils/: ConfigurationOptions.h  Logger.h  Utils.h
src/PythonInterface/: python_interface.cpp
src/RunHandling/: IMSHandler.cpp
src/Utils/: Logger.cpp  Utils.cpp
